2005-08-29  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* VERSION :
	* configure.ac :

	  - Version 0.3.1

	* lib/rqueue.c :
	* lib/rqueue.h :
	* lib/iqueue.c :
	* lib/iqueue.h :

	  - Dequeue function now requires that all fields are given.

	  - Now relations are normalised before they are enqueued.

	  - The queue implementation now uses the tbe_rel structure, and
	    as a tbe_rel queue, is apropriately renamed to rqueue.

	* lib/network.c :

	  - Now uses rqueue.

	* lib/Makefile :

	  - Compile rqueue.c instead of iqueue.c.

	* lib/rel.c :
	* lib/rel.h :

	  - Added create(), destroy() and free() functions to support the
	    tbe_rel structure.

	  - Added an ISEQL macro.

2005-08-26  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/interval.h :

	  - Renamed macros for clarity.

	* lib/rel.c :
	* lib/rel.h :

	  - Cleanup of identifier names.

	  - Defined a new tbe_rel structure to encapsulate two interval id's
	    and a relset.

	  - Changed the interface of tbe_rel_normalise() to use the new
	    tbe_rel structure.

	* lib/network.c :
	* lib/network.h :

          - Changed the interface of the following functions to use the new
            tbe_rel structure:

            - tbe_net_add_rel_noprop()
            - tbe_net_add_rel()

	* test/test.c :

	  - Now uses the new interfaces and macros.

2005-08-25  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/interval.h :

	  - A new header file that contains an interval structure (endpoints
	    and mask) plus some useful macros.

	* lib/Makefile.in :

	  - Include interval.h.

	* lib/network.c :
	* lib/network.h :

	  - Renamed tbe_net_rel() to tbe_net_get_rel().

	  - Removed tbe_net_normalise(). This is really a relation thing, and
	    as such, should be in rel.c.

	  - Renamed interval identifiers to int_id.

	  - Used the new tbe_interval structure where two endpoints and a mask
	    were previously used.

	  - In tbe_net_add_ep(), there's no need to check the validity of