@@ -4,12 +4,12 @@
 #include <tribe/rlist.h>
 
 typedef struct {
-  unsigned int interval;
-  unsigned int relset;
+  unsigned int int_id;
+  unsigned int rs;
 } __tbe_rlist_node;
 
 typedef struct {
-  unsigned int interval;
+  unsigned int int_id;
   FILE *stream;
 } __tbe_rlist_dump;
 
@@ -28,7 +28,7 @@ static int tbe_rlist_cmp(const void *a_ptr1, const void *a_ptr2)
   if (!ptr1 || !ptr2)
     return TBE_NULLPTR;
 
-  return ((ptr1->interval == ptr2->interval) ? TBE_OK : TBE_FAILURE);
+  return ((ptr1->int_id == ptr2->int_id) ? TBE_OK : TBE_FAILURE);
 }
 
 /* dump rlist node. use with tbe_list_traverse */
@@ -43,9 +43,9 @@ static int tbe_rlist_trav_dump(const void *a_node, void *a_dump)
   if (!dptr->stream)
     return TBE_INVALIDINPUT;
 
-  fprintf(dptr->stream, "%03u ", dptr->interval);
-  tbe_rel_dump(rptr->relset, dptr->stream);
-  fprintf(dptr->stream, "%03u\n", rptr->interval);
+  fprintf(dptr->stream, "%03u ", dptr->int_id);
+  tbe_rel_dump(rptr->rs, dptr->stream);
+  fprintf(dptr->stream, "%03u\n", rptr->int_id);
 
   return TBE_OK;
 }
@@ -69,7 +69,7 @@ void tbe_rlist_purge(tbe_rlist a_rlist)
 }
 
 /* add to the list. if a_rs contains all rels, it is removed (or not added) */
-int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int, unsigned int a_rs)
+int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int_id, unsigned int a_rs)
 {
   __tbe_rlist_node *nptr;
   __tbe_rlist_node *tptr;
@@ -79,16 +79,16 @@ int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int, unsigned int a_rs)
   if (!a_rlist)
     return TBE_NULLPTR;
 
-  tnode.interval = a_int;
+  tnode.int_id = a_int_id;
 
-  /* see if a_int is already in this rlist */
+  /* see if a_int_id is already in this rlist */
   retval = tbe_list_get_data_one(a_rlist,
                                  (void *) &tnode,
                                  tbe_rlist_cmp,
                                  (void *) &tptr);
 
   if (retval == TBE_OK) {
-    /* a_int is already in. decide if we should remove or replace rs */
+    /* a_int_id is already in. decide if we should remove or replace rs */
     if (TBE_REL_SET_ISFILL(a_rs)) {
       /* a_rs is all relations, so we need to remove from the rlist */
       return tbe_list_del_data(a_rlist,
@@ -98,12 +98,12 @@ int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int, unsigned int a_rs)
     }
     else {
       /* a_rs is not all relations so we blindly replace it */
-      tptr->relset = a_rs;
+      tptr->rs = a_rs;
       return TBE_OK;
     }
   }
   else if (retval == TBE_NOTFOUND) {
-    /* a_int is not in the rlist. see if we need to add */
+    /* a_int_id is not in the rlist. see if we need to add */
     if (TBE_REL_SET_ISFILL(a_rs)) {
       /* a_rs is all relations, DO NOTHING! */
       return TBE_OK;
@@ -113,8 +113,8 @@ int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int, unsigned int a_rs)
       if (!(nptr = TBE_MEM_MALLOC(__tbe_rlist_node, 1)))
         return TBE_MALLOCFAILED;
 
-      nptr->interval = a_int;
-      nptr->relset = a_rs;
+      nptr->int_id = a_int_id;
+      nptr->rs = a_rs;
 
       return tbe_list_add_tail(a_rlist, (void *) nptr);
     }
@@ -123,8 +123,10 @@ int tbe_rlist_add(tbe_rlist a_rlist, unsigned int a_int, unsigned int a_rs)
   return retval;
 }
 
-/* gives the rs of the given interval. if a_int isn't in, a_rs is set to all */
-int tbe_rlist_get(tbe_rlist a_rlist, unsigned int a_int, unsigned int *a_rs)
+/* gives the rs of a_int_id. if a_int_id isn't in, a_rs is set to all */
+int tbe_rlist_get(tbe_rlist a_rlist,
+                  unsigned int a_int_id,
+                  unsigned int *a_rs)
 {
   __tbe_rlist_node *tptr;
   __tbe_rlist_node tnode;
@@ -133,7 +135,7 @@ int tbe_rlist_get(tbe_rlist a_rlist, unsigned int a_int, unsigned int *a_rs)
   if (!a_rlist || !a_rs)
     return TBE_NULLPTR;
 
-  tnode.interval = a_int;
+  tnode.int_id = a_int_id;
 
   retval = tbe_list_get_data_one(a_rlist,
                                  (void *) &tnode,
@@ -142,7 +144,7 @@ int tbe_rlist_get(tbe_rlist a_rlist, unsigned int a_int, unsigned int *a_rs)
 
   switch (retval) {
     case TBE_OK :
-      *a_rs = tptr->relset;
+      *a_rs = tptr->rs;
       return TBE_OK;
     case TBE_NOTFOUND :
       TBE_REL_SET_FILL(*a_rs);
@@ -152,20 +154,20 @@ int tbe_rlist_get(tbe_rlist a_rlist, unsigned int a_int, unsigned int *a_rs)
   return retval;
 }
 
-/* dumps the list, each printed with a_int */
-int tbe_rlist_dump(tbe_rlist a_rlist, unsigned int a_int, FILE *a_stream)
+/* dumps the list, each printed with a_int_id */
+int tbe_rlist_dump(tbe_rlist a_rlist, unsigned int a_int_id, FILE *a_stream)
 {
   __tbe_rlist_dump dtmp;
 
   if (!a_rlist || !a_stream)
     return TBE_NULLPTR;
 
-  dtmp.interval = a_int;
+  dtmp.int_id = a_int_id;
   dtmp.stream = a_stream;
 
   /* if the given rlist is empty, just print the given interval */
   if (tbe_list_length(a_rlist) == 0) {
-    fprintf(a_stream, "%03u\n", a_int);
+    fprintf(a_stream, "%03u\n", a_int_id);
     return TBE_OK;
   }
 
